# orri

./: .gitattributes  .gitignore  README.md  service.nix
backend/: Cargo.nix  Cargo.toml  run.sh
backend/src/: main.rs
backend/src/orri/: app_state.rs  domain.rs  encryption_key.rs  environment.rs  file.rs  mod.rs  page.rs  route.rs  session_data.rs  site_key.rs  url_path.rs  util.rs
backend/src/orri/http/: guard.rs  http.rs  index.rs  mod.rs  static_files.rs
backend/src/orri/page/: mod.rs  page.rs
backend/src/orri/site/: mod.rs  site.rs
backend/src/orri/site/http/: add_route.rs  app_redirect.rs  create.rs  edit_route.rs  find_site.rs  list.rs  list_sites.rs  manage_site.rs  mod.rs  my_sites.rs  new_site.rs  site_exist.rs  view.rs  view_site.rs
backend/src/orri/site/http/api/: add_route.rs  create.rs  create_success.rs  edit_route.rs  mod.rs  new_site.rs  remove_route.rs  remove_site.rs
backend/src/orri/slowhtml/: attributes.rs  html.rs  mod.rs
backend/src/zait/: domain.rs  file.rs  mod.rs
backend/src/zait/http/: mod.rs
backend/src/zait/site/: mod.rs
backend/src/zait/site/http/: create.rs  mod.rs  view.rs
backend/src/zait/site/http/api/: create.rs
frontend/: default.nix  index.html  new.html
frontend/static/: add_route.js  app.js  edit_route.js  find_site.js  list_sites.js  manage_site.js  new_site.js  orri.css  orri.js  remove_route.js  route_form.js  styles.css
