[package]
name = "zait"
version = "0.1.0"
authors = ["Petter Rasmussen <petter@hask.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.1"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
ring = "0.16.12"
hex = "0.4.2"
rand = "0.7.3"
tempfile = "3.1.0"
