[package]
name = "orri"
version = "1.1.0"
authors = ["Petter Rasmussen <petter@hask.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-http = "1.0.1"
actix-rt = "1.0.0"
actix-session = "0.3.0"
actix-service = "1.0.5"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
ring = "0.16.12"
hex = "0.4.2"
rand = "0.7.3"
tempfile = "3.1.0"
http = "0.2.1"
data-url = "0.1.0"
htmlescape = "0.3.1"
log = "0.4.8"
env_logger = "0.7.1"
rust-argon2 = "0.8.2"
mime_guess = "2.0.3"
